--- a/app/src/main/res/menu/gatt_services.xml
+++ b/app/src/main/res/menu/gatt_services.xml
@@ -3,18 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.android.bluetoothlegatt.DeviceControlActivity">
-    <item android:id="@+id/menu_refresh"
-          android:title=""
-          android:checkable="false"
-          android:orderInCategory="2"
-        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_connect"
         android:orderInCategory="101"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/menu_connect"
         app:showAsAction="ifRoom|withText" />
-    <item android:id="@+id/menu_disconnect"
-          android:title="@string/menu_disconnect"
-          android:orderInCategory="102"
+    <item
+        android:id="@+id/menu_disconnect"
+        android:orderInCategory="102"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_disconnect"
         app:showAsAction="ifRoom|withText" />
 </menu>
