--- a/app/src/main/res/layout/gatt_services_characteristics.xml
+++ b/app/src/main/res/layout/gatt_services_characteristics.xml
@@ -443,13 +443,56 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_record"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/olive"
-        android:enabled="false"
-        android:text="@string/record_label"
-        android:textColor="@color/white" />
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/chckbx_repeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false" />
+
+        <Spinner
+            android:id="@+id/spinner_key"
+            style="@android:style/Widget.Material.Spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:entries="@array/keys"
+            android:textSize="12sp"
+            android:textStyle="normal" />
+
+        <Button
+            android:id="@+id/btn_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/olive"
+            android:enabled="false"
+            android:text="@string/record_label"
+            android:textColor="@color/white" />
+
+        <Spinner
+            android:id="@+id/spinner_min_o"
+            style="@android:style/Widget.Material.Spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:entries="@array/octaves"
+            android:textSize="12sp"
+            android:textStyle="normal" />
+
+        <Spinner
+            android:id="@+id/spinner_max_o"
+            style="@android:style/Widget.Material.Spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:entries="@array/octaves"
+            android:textSize="12sp"
+            android:textStyle="normal" />
+    </LinearLayout>
 
 </LinearLayout>
