--- a/app/src/main/res/menu/gatt_services.xml
+++ b/app/src/main/res/menu/gatt_services.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.bluetoothlegatt.DeviceControlActivity">
+    tools:context="com.uos.ikw.traumschreiber.DeviceControlActivity">
     <item
         android:id="@+id/menu_connect"
         android:orderInCategory="101"
