--- a/app/src/main/res/values/base-strings.xml
+++ b/app/src/main/res/values/base-strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string name="app_name">Traumschreiber EEG</string>
+    <string name="app_name">Traumschreiber</string>
 </resources>
